data/issues_nolabel/nolabel_test_19214.txt
for loop not working in tf.contrib.autograph

The following example for autograph is not working (see my system-info below):
from tensorflow.contrib import autograph

def computation():
    for k in range(4):
        print(k)
    return tf.no_op()

computation_autographd = autograph.to_graph(computation, verbose=True)

If I remove the for loop, it works fine.
With the loop, it fails with:
File "/opt/project/examples/_dict_in_autograph_example.py", line 66, in <module>
verbose=True)
  File "/usr/local/lib/python3.5/dist-packages/tensorflow/contrib/autograph/impl/api.py", line 245, in to_graph
    compiled_node, compiled_src = compiler.ast_to_object(module)
  File "/usr/local/lib/python3.5/dist-packages/tensorflow/contrib/autograph/pyct/compiler.py", line 75, in ast_to_object
    return imp.load_source(module_name, f.name), source
  File "/usr/lib/python3.5/imp.py", line 172, in load_source
    module = _load(spec)
  File "<frozen importlib._bootstrap>", line 693, in _load
  File "<frozen importlib._bootstrap>", line 673, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 661, in exec_module
  File "<frozen importlib._bootstrap_external>", line 767, in get_code
  File "<frozen importlib._bootstrap_external>", line 727, in source_to_code
  File "<frozen importlib._bootstrap>", line 222, in _call_with_frames_removed
  File "/tmp/tmpqdvecllf.py", line 21
    () = __ops.for_loop(autograph_utils.dynamic_builtin(range, 4),
       ^
SyntaxError: can't assign to ()

Process finished with exit code 1

python3 --version
Python 3.5.2
python3 -c "import tensorflow as tf; print(tf.GIT_VERSION, tf.VERSION)"
v1.8.0-0-g93bc2e2072 1.8.0
== cat /etc/issue ===============================================
Linux 5a7b67a966f3 4.9.87-linuxkit-aufs #1 SMP Wed Mar 14 15:12:16 UTC 2018 x86_64 x86_64 x86_64 GNU/Linux
VERSION="16.04.3 LTS (Xenial Xerus)"
VERSION_ID="16.04"
VERSION_CODENAME=xenial
== are we in docker =============================================
Yes
== compiler =====================================================
c++ (Ubuntu 5.4.0-6ubuntu1~16.04.9) 5.4.0 20160609
Copyright (C) 2015 Free Software Foundation, Inc.
This is free software; see the source for copying conditions.  There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
== uname -a =====================================================
Linux 5a7b67a966f3 4.9.87-linuxkit-aufs #1 SMP Wed Mar 14 15:12:16 UTC 2018 x86_64 x86_64 x86_64 GNU/Linux
== check pips ===================================================
== check for virtualenv =========================================
False
== tensorflow import ============================================
tf.VERSION = 1.8.0
tf.GIT_VERSION = v1.8.0-0-g93bc2e2072
tf.COMPILER_VERSION = v1.8.0-0-g93bc2e2072
Sanity check: array([1], dtype=int32)
== env ==========================================================
LD_LIBRARY_PATH is unset
DYLD_LIBRARY_PATH is unset
== nvidia-smi ===================================================
./tf_env_collect.sh: line 105: nvidia-smi: command not found
== cuda libs  ===================================================